[metrics] Avoid y-axis label clipping.
Convert overly-large ms values to seconds.

--- a/apps/static/css/metrics.css
+++ b/apps/static/css/metrics.css
@@ -14,6 +14,12 @@
     stroke-width: 0.25;
 }
 
+.scatter .legend {
+    font-size: .2em;
+    text-transform: uppercase;
+
+}
+
 .scatter .labels text {
     font-size: .2em;
 }
